--- a/src/store/benchmark/async/CMakeLists.txt
+++ b/src/store/benchmark/async/CMakeLists.txt
@@ -1,8 +1,9 @@
 add_subdirectory(common)
 add_subdirectory(retwis)
+add_subdirectory(ycsbt)
 
 file(GLOB SourceFiles "${CMAKE_CURRENT_SOURCE_DIR}/*.cc")
 
 add_executable(benchmark ${SourceFiles})
 target_include_directories(benchmark PUBLIC ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})
-target_link_libraries(benchmark BenchmarkCommon BenchmarkRetwis StoreStrong Common)
+target_link_libraries(benchmark BenchmarkCommon BenchmarkRetwis BenchmarkYcsbt StoreStrong Common)
